# pytrigger

./: .codacy.yml  .coveragerc  AUTHORS.md  MANIFEST.in  README.md  SOURCES.txt  pyproject.toml  setup.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
.github/workflows/: python.yml
docs/source/: conf.py  index.rst
docs/source/API/: modules.rst
docs/source/examples/: demo.ipynb
test/: test_db.py
trigger/: __init__.py  __main__.py  _credentials.py  db.py  utils.py
